feat:修复已知bug、新增github登录
